--- a/scritturaTesi/introduzione.tex
+++ b/scritturaTesi/introduzione.tex
@@ -9,19 +9,19 @@ Questo tipo di cifrario rientra nella classe dei crittosistemi simmetrici (a chi
 
 L'idea alla base dei crittosistemi asimmetrici (a chiave pubblica) \`e quella di utilizzare due chiavi diverse per la codifica e la decodifica. La prima implementazione di un protocollo che rientra in questa classe \`e stata realizzata nel 1978 e prende il nome di RSA~\cite{rivest1978method}, il quale oggigiorno \`e ampiamente utilizzato. In crittosistemi a chiave pubblica se Bob vuole ricevere dei messaggi codificati con una chiave pubblica per prima cosa deve generare per s\'e stesso una chiave privata. Da questa chiave produce una chiave pubblica che rivela ad Alice la quale utilizza la chiave pubblica per codificare il messaggio e trasmetterlo a Bob. Una volta ricevuto il messaggio Bob lo decodifica utilizzando la propria chiave privata.
 
-La sicurezza di questi sistemi, a differenza di quelli a chiave privata, non si basa su dimostrazioni matematiche ma solamente sulla complessit\`a computazionale. Questo perch\'e per la produzione delle chiavi vengono utilizzare delle funzioni matematiche molto semplici da calcolare ma molti difficili da invertire. In termini di complessit\`a computazionale difficile sta a significare che il tempo necessario per eseguire un'operazione cresce esponenzialmente con la lunghezza della chiave, mentre per operazioni semplice il tempo di esecuzione \`e polinomiale rispetto la lunghezza della chiave. Ad esempio, la sicurezza del protocollo RSA si basa proprio sulla difficolt\`a di fattorizzazione di interi molto grandi.
+La sicurezza di questi sistemi, a differenza di quelli a chiave privata, non si basa su dimostrazioni matematiche ma solamente sulla complessit\`a computazionale. Questo perch\'e per la produzione delle chiavi vengono utilizzare delle funzioni matematiche molto semplici da calcolare ma molti difficili da invertire. In termini di complessit\`a computazionale difficile sta a significare che il tempo necessario per eseguire un'operazione cresce esponenzialmente con la lunghezza della chiave, mentre per operazioni semplici il tempo di esecuzione \`e polinomiale rispetto la lunghezza della chiave. Ad esempio, la sicurezza del protocollo RSA si basa proprio sulla difficolt\`a di fattorizzazione di interi molto grandi.
 
-Non essendoci prove matemetiche che garantiscano la sicurezza dei crittosistemi a chiave pubblica non \`e da escludere la probabilit\`a che sia possibile realizzare un algoritmo classico che abbia una complessit\`a computazionale polinomiale per la fattorizzazione di grandi interi. Di fatto la sicurezza di questa classe di protocolli \`e gi\`a minacciata da un algoritmo per computer qunatistici, ideato da Peter Shor nel 1994, che permette la fattorizzazione di grandi interi con complessit\`a polinomiale~\cite{365700}.
+Non essendoci prove matemetiche che garantiscano la sicurezza dei crittosistemi a chiave pubblica non \`e da escludere la probabilit\`a che sia possibile realizzare un algoritmo classico che abbia una complessit\`a computazionale polinomiale per la fattorizzazione di grandi interi. Di fatto la sicurezza di questa classe di protocolli \`e gi\`a minacciata da un algoritmo per computer quantistici, ideato da Peter Shor nel 1994, che permette la fattorizzazione di grandi interi con complessit\`a polinomiale~\cite{365700}.
 
 Per questo al giorno d'oggi \`e sempre pi\`u importante la ricerca su protocolli di distribuzione quantistica di chiavi (QKD) che utilizzano principi della fisica quantistica con lo scopo di condividere chiavi su canali pubblici. Questi protocolli rientrano nella classe di crittosistemi simmetrici perch\'e la codifica e la decodifica dei messaggi trasmessi viene effettuata con una chiave privata comune ad Alice e Bob. Il potere della QKD risiede nel fatto che grazie alla fisica quantistica si ha la possibilit\`a di determinare se la condivisione dei messaggi necessari per la produzione della chiave \`e avvenuta in modo sicuro o meno, in parole povere si \`e in grado di determinare se una spia (Eve) \`e venuta in possesso di questi messaggi.
 
 Il primo protocollo ad essere stato proposto per la distribuzione quantistica di chiavi \`e il BB84 che prende il nome dai suoi ideatori Charles H. Bennett e Gilles Brassard che lo hanno realizzato nel 1984~\cite{ Bennett_2014}.
 Questo protocollo per realizzare la comunicazione utilizza due canali di trasmissione, uno classico e pubblico e l'altro quantistico e privato. Alice trasmette sul canale quantistico a Bob una sequenza di fotoni polarizzati in modo casuale in due basi, ognuna delle quali ha due gradi di polarizzazione. Nella prima base il fotone pu\`o essere polarizzato a 0 o 90 gradi e verr\`a considerato come un bit 0, mentre nella seconda a 45 o 135 gradi e verr\`a considerato come bit 1.
-In ricezione Bob effettuer\`a la misura della polarizzazione del fotone scegliendo una base con probabilit\`a uniforme dalle due basi disponibili. Alla fine della trasmissione Bob sar\`a in possesso dei gradi di polarizzazione misurati i quali verranno convertiti in 0 e 1 seguendo la stessa convenzione di Alice. Da notare che parte dei dati di Bob differiranno da quelli inviati da Alice perch\`e Bob ha effettuato la misura utilizzando la base sbagliata.
+In ricezione Bob effettuer\`a la misura della polarizzazione del fotone scegliendo una base con probabilit\`a uniforme dalle due basi disponibili. Alla fine della trasmissione Bob sar\`a in possesso dei gradi di polarizzazione misurati i quali verranno convertiti in 0 e 1 seguendo la stessa convenzione di Alice. Da notare che parte dei dati di Bob differir\`a da quelli inviati da Alice perch\`e Bob ha effettuato la misura utilizzando la base sbagliata.
 Successivamente Bob comunicher\`a ad Alice quale base ha utilizzato per la misura di ogni fotone ed Alice scarter\`a tutti quei fotoni la cui base di trasmissione e misura non combaciano, e lo comunicher\`a a Bob. Fatto ci\`o Alice e Bob saranno in possesso, almeno in teoria, della stessa stringa random di bit.
 Quello che potrebbe succedere \`e che durante la trasmissione Eve intercetti i fotoni inviati da Alice per effettuarne una misura e poi inviare il risultato della propria misura a Bob. Tuttavia questo altererebbe il risultato della misura di Bob perch\`e Eve non pu\`o sapere con quale base \`e stato polarizzato il fotone, e di conseguenza non pu\`o sapere con quale base misurarlo. Misurando un fotone con la base sbagliata nel momento in cui lo ritrasmetter\`a a Bob egli ricever\`a un fotone polarizzato in modo differente rispetto a quello inviato da Alice. Questo permetter\`a ad Alice e Bob di determinare la presenza di una spia andando a confrontare una porzione di bit misurati con la stessa base utilizzata in trasmissione e quindi ritenuti uguali. Durante il confronto se si riscontrano bit diversi si determina la presenza di una spia. Se Eve ha intercettatto troppi fotoni non viene prodotta nessuna chiave e si ricomincia il protocollo da capo, in caso contrario si utilizzano i bit rimasti segreti come chiave crittografica\cite{zhao_development_2018}. La sicurezza di questo ed altri protocolli QKD si basa proprio sulle peculiarit\`a della misura di segnali quantistici.
 
-In questa tesi studieremo un protocollo di QKD che utilizza una codifica non nei singoli fotoni ma piuttosto nella fase di un segnale quantistico. La tesi è strutturata nel seguente modo: nel capitolo 1~\ref{cap:capitolo_1}~ introdurremo gli stati coerenti con le loro propriet\`a e la misura di segnali quantistici, nel capitolo 2~\ref{cap:capitolo_2}~ discuteremo dei protocolli QKD ed in particolare del protocollo CV-QKD con modulazione gaussiana,  nel capitolo 3~\ref{cap:capitolo_3}~ illustreremo una possibile implementazione del protocollo discusso nel capitolo precedente ed infine, nel capitolo 4 discuteremo le conclusioni.
+In questa tesi studieremo un protocollo di QKD che utilizza una codifica non nei singoli fotoni ma piuttosto nella fase di un segnale quantistico. La tesi è strutturata nel seguente modo: nel capitolo ~\ref{cap:capitolo_1} introdurremo gli stati coerenti con le loro propriet\`a e la misura di segnali quantistici, nel capitolo ~\ref{cap:capitolo_2} discuteremo dei protocolli QKD ed in particolare del protocollo CV-QKD con modulazione gaussiana,  nel capitolo~\ref{cap:capitolo_3} illustreremo una possibile implementazione del protocollo discusso nel capitolo precedente ed infine, nel capitolo 4 discuteremo le conclusioni.
 
 
 
